--- a/index.html
+++ b/index.html
@@ -92,6 +92,58 @@
     </section>
 
     <div class="gradient"></div>
+    <div class="section-blue">
+      <section id="projects">
+        <h2>Projects I'm proud of</h2>
+        <article>
+          <div class="text">
+            <h4>Latest Projects</h4>
+            <h3>E-Charge platform</h3>
+            <p class="blackbox">
+              A Telco recharge platform, I implemented with Spring boot
+              framework and deployed on Docker container
+            </p>
+            <h4>Technologies used include:</h4>
+            <ul>
+              <li>Java</li>
+              <li>Spring Boot</li>
+              <li>Docker</li>
+            </ul>
+          </div>
+
+          <img
+            src="images/first-project.webp"
+            alt="Screenshot of the E-Charge."
+          />
+        </article>
+
+        <article class="reverse">
+          <div class="text">
+            <h4>Fintech Project</h4>
+            <h3>Mobile Wallet platform</h3>
+            <p class="blackbox">
+              A Wallet solution serving basic functionalities like debit,
+              cash-in, transfer, purchase. I developed the platform using Spring
+              boot framework and a hosts of other spring line of products and
+              deployed on Docker container
+            </p>
+            <h4>Technologies used include:</h4>
+            <ul>
+              <li>Java</li>
+              <li>Spring Boot</li>
+              <li>Docker</li>
+            </ul>
+          </div>
+
+          <img
+            src="images/first-project.webp"
+            alt="Screenshot of the E-Charge."
+          />
+        </article>
+      </section>
+    </div>
+
+    <div class="gradient"></div>
     <div class="section-plum">
       <section id="contact">
         <h2>Contact me</h2>
